--- a/index.html
+++ b/index.html
@@ -61,6 +61,10 @@ Email: lyou@seu.edu.cn <br />
 </td></tr></table>
 <h2>News</h2> 
 <p><ul>
+<li><p>[<span class="statement">2025.09</span>]  Li You was listed in the 2025 World's Top 2% Scientists. (尤力老师入选2025年全球前2%顶尖科学家) <a href="https://mp.weixin.qq.com/s/IAQWTkkCam2Dc9x7O_wsog">[link]</a></p>
+</li>
+<li><p>[<span class="statement">2025.09</span>]  Qingfu Kong's paper on integrated sensing and communications in cooperative massive MIMO LEO satellite-terrestrial networks was accepted by IEEE Wireless Communications Letters. (孔庆付的关于大规模MIMO低轨星地协作通感一体化的论文被IEEE Wireless Communications Letters录用) <a href="https://ieeexplore.ieee.org/document/11178240">[link]</a></p>
+</li>
 <li><p>[<span class="statement">2025.08</span>]  Qingfu Kong's paper on cooperative massive MIMO LEO satellite-terrestrial networks was accepted by IEEE Transactions on Vehicular Technology. (孔庆付的关于大规模MIMO低轨星地协作网络的论文被IEEE Transactions on Vehicular Technology录用) <a href="https://ieeexplore.ieee.org/document/11143887">[link]</a></p>
 </li>
 <li><p>[<span class="statement">2025.07</span>]  Mengyu Qian's paper on continuous aperture array-based communications was accepted by IEEE GLOBECOM 2025. (潜梦羽的关于连续孔径阵列通信的论文被2025 IEEE GLOBECOM会议录用)</p>
@@ -77,15 +81,15 @@ Email: lyou@seu.edu.cn <br />
 </li>
 <li><p>[<span class="statement">2025.04</span>]  Jinke Tang's paper on multi-frequency massive MIMO was accepted by IEEE Transactions on Communications. (汤金科的关于多频段大规模MIMO的论文被IEEE Transactions on Communications录用) <a href="https://ieeexplore.ieee.org/document/10993474">[link]</a></p>
 </li>
-<li><p>[<span class="statement">2025.04</span>]  Zhenzhou Jin's paper on XL-MIMO was accepted by IEEE Transactions on Cognitive Communications and Networking. (金振洲的关于超大规模MIMO的论文被IEEE Transactions on Cognitive Communications and Networking录用) <a href="https://ieeexplore.ieee.org/document/10981727">[link]</a></p>
-</li>
-<li><p>[<span class="statement">2025.04</span>]  Siyu Cheng's paper on XL-MIMO was accepted by IEEE Wireless Communications Letters. (程思雨的关于超大规模MIMO的论文被IEEE Wireless Communications Letters录用) <a href="https://ieeexplore.ieee.org/document/10955747">[link]</a></p>
-</li>
 </ul></p>
 <div class="content-container">  
 <div class="toggle-icon" id="toggleIcon"></div> View More Earlier News 
 <div class="toggle-content" id="toggleContent">  
 <p><ul>
+<li><p>[<span class="statement">2025.04</span>]  Zhenzhou Jin's paper on XL-MIMO was accepted by IEEE Transactions on Cognitive Communications and Networking. (金振洲的关于超大规模MIMO的论文被IEEE Transactions on Cognitive Communications and Networking录用) <a href="https://ieeexplore.ieee.org/document/10981727">[link]</a></p>
+</li>
+<li><p>[<span class="statement">2025.04</span>]  Siyu Cheng's paper on XL-MIMO was accepted by IEEE Wireless Communications Letters. (程思雨的关于超大规模MIMO的论文被IEEE Wireless Communications Letters录用) <a href="https://ieeexplore.ieee.org/document/10955747">[link]</a></p>
+</li>
 <li><p>[<span class="statement">2025.03</span>]  Yuqi Ye's paper on fluid antenna was accepted by IEEE Transactions on Vehicular Technology. (叶育琦的关于流体天线的论文被IEEE Transactions on Vehicular Technology录用) <a href="https://ieeexplore.ieee.org/document/10949741">[link]</a></p>
 </li>
 <li><p>[<span class="statement">2025.03</span>]  Yu Zhao's paper on massive MIMO was accepted by IEEE VTC 2025 Spring. (赵宇的关于大规模MIMO的论文被2025 IEEE VTC Spring录用)</p>
@@ -208,6 +212,7 @@ Email: lyou@seu.edu.cn <br />
 </table>
 </body>
 </html>
+
 
 
 
