--- a/index.html
+++ b/index.html
@@ -61,6 +61,12 @@ Email: lyou@seu.edu.cn <br />
 </td></tr></table>
 <h2>News</h2> 
 <p><ul>
+<li><p>[<span class="statement">2025.09</span>]  Zhenzhou Jin's paper on channel fingerprint was accepted by IEEE Transactions on Vehicular Technology. (金振洲的关于信道图谱的论文被IEEE Transactions on Vehicular Technology录用) <a href="https://ieeexplore.ieee.org/document/11190081">[link]</a></p>
+</li>
+<li><p>[<span class="statement">2025.09</span>]  Xinyi Guo's paper on massive MIMO federated learning was accepted by IEEE Transactions on Vehicular Technology. (郭鑫怡的关于大规模MIMO联邦学习的论文被IEEE Transactions on Vehicular Technology录用)</p>
+</li>
+<li><p>[<span class="statement">2025.09</span>]  Li You was recommended as the Signal Processing for Communications Symposium Co-Chair of Globecom 2026. (尤力老师被遴选担任IEEE Globecom 2026 Signal Processing for Communications Symposium共同主席)</p>
+</li>
 <li><p>[<span class="statement">2025.09</span>]  Li You was listed in the 2025 World's Top 2% Scientists. (尤力老师入选2025年全球前2%顶尖科学家) <a href="https://mp.weixin.qq.com/s/IAQWTkkCam2Dc9x7O_wsog">[link]</a></p>
 </li>
 <li><p>[<span class="statement">2025.09</span>]  Qingfu Kong's paper on integrated sensing and communications in cooperative massive MIMO LEO satellite-terrestrial networks was accepted by IEEE Wireless Communications Letters. (孔庆付的关于大规模MIMO低轨星地协作通感一体化的论文被IEEE Wireless Communications Letters录用) <a href="https://ieeexplore.ieee.org/document/11178240">[link]</a></p>
@@ -75,24 +81,24 @@ Email: lyou@seu.edu.cn <br />
 </li>
 <li><p>[<span class="statement">2025.06</span>]  Yuqi Ye's paper on fluid antenna was accepted by IEEE Transactions on Wireless Communications. (叶育琦的关于流体天线的论文被IEEE Transactions on Wireless Communications录用) <a href="https://ieeexplore.ieee.org/document/11080242">[link]</a></p>
 </li>
+</ul></p>
+<div class="content-container">  
+<div class="toggle-icon" id="toggleIcon"></div> View More Earlier News 
+<div class="toggle-content" id="toggleContent">  
+<p><ul>
 <li><p>[<span class="statement">2025.05</span>]  Chenjie Xie's paper on multi-band channel fingerprints extrapolation was accepted by IEEE Journal on Selected Areas in Communications. (谢晨洁的关于多频段信道图谱的论文被IEEE Journal on Selected Areas in Communications录用) <a href="https://ieeexplore.ieee.org/document/11059941">[link]</a></p>
 </li>
 <li><p>[<span class="statement">2025.04</span>]  Huibin Zhou's paper on massive MIMO LEO satellite communications was accepted by IEEE Transactions on Communications. (周慧斌的关于大规模MIMO低轨卫星通信的论文被IEEE Transactions on Communications录用) <a href="https://ieeexplore.ieee.org/document/10993491">[link]</a></p>
 </li>
 <li><p>[<span class="statement">2025.04</span>]  Jinke Tang's paper on multi-frequency massive MIMO was accepted by IEEE Transactions on Communications. (汤金科的关于多频段大规模MIMO的论文被IEEE Transactions on Communications录用) <a href="https://ieeexplore.ieee.org/document/10993474">[link]</a></p>
 </li>
-</ul></p>
-<div class="content-container">  
-<div class="toggle-icon" id="toggleIcon"></div> View More Earlier News 
-<div class="toggle-content" id="toggleContent">  
-<p><ul>
 <li><p>[<span class="statement">2025.04</span>]  Zhenzhou Jin's paper on XL-MIMO was accepted by IEEE Transactions on Cognitive Communications and Networking. (金振洲的关于超大规模MIMO的论文被IEEE Transactions on Cognitive Communications and Networking录用) <a href="https://ieeexplore.ieee.org/document/10981727">[link]</a></p>
 </li>
 <li><p>[<span class="statement">2025.04</span>]  Siyu Cheng's paper on XL-MIMO was accepted by IEEE Wireless Communications Letters. (程思雨的关于超大规模MIMO的论文被IEEE Wireless Communications Letters录用) <a href="https://ieeexplore.ieee.org/document/10955747">[link]</a></p>
 </li>
 <li><p>[<span class="statement">2025.03</span>]  Yuqi Ye's paper on fluid antenna was accepted by IEEE Transactions on Vehicular Technology. (叶育琦的关于流体天线的论文被IEEE Transactions on Vehicular Technology录用) <a href="https://ieeexplore.ieee.org/document/10949741">[link]</a></p>
 </li>
-<li><p>[<span class="statement">2025.03</span>]  Yu Zhao's paper on massive MIMO was accepted by IEEE VTC 2025 Spring. (赵宇的关于大规模MIMO的论文被2025 IEEE VTC Spring录用)</p>
+<li><p>[<span class="statement">2025.03</span>]  Yu Zhao's paper on massive MIMO was accepted by IEEE VTC 2025 Spring. (赵宇的关于大规模MIMO的论文被2025 IEEE VTC Spring录用) <a href="https://ieeexplore.ieee.org/abstract/document/11174505">[link]</a></p>
 </li>
 <li><p>[<span class="statement">2025.03</span>]  Mengyu Qian and Huibin Zhou received the Student Travel Grant for IEEE WCNC 2025. (课题组潜梦羽和周慧斌获得IEEE WCNC 2025 Student Travel Grant奖项)</p>
 </li>
@@ -212,6 +218,7 @@ Email: lyou@seu.edu.cn <br />
 </table>
 </body>
 </html>
+
 
 
 
