--- a/publications.html
+++ b/publications.html
@@ -27,6 +27,12 @@
 <h2>Journal</h2>
 <h4>Preprint</h4>
 <ul>
+<li><p>[P16] Z. Jin, <b>L. You*</b>, X.-G. Xia, and X. Q. Gao, “EnvCDiff: Joint refinement of environmental information and channel fingerprints via conditional generative diffusion model,” <b><i>IEEE Transactions on Vehicular Technology</i></b>, 2025. [<a href="https://ieeexplore.ieee.org/document/11190081">Full Paper</a>]</p>
+</li>
+<li><p>[P15] X. Guo, <b>L. You*</b>, Z. Chen, X. Lu, A. Nallanathan, and X. Q. Gao, “Quantization-based federated learning in user-centric cell-free massive MIMO,” <b><i>IEEE Transactions on Vehicular Technology</i></b>, 2025.</p>
+</li>
+<li><p>[P14] W. Zhu, Y. Zhang, Z. Xiang, D. Shi, <b>L. You</b>, and X. Q. Gao*, “Beam-structured precoding for network massive MIMO systems via Hamiltonian-based optimization,” <b><i>Science China Information Sciences</i></b>, 2025.</p>
+</li>
 <li><p>[P13] Q. Kong, <b>L. You*</b>, H. Li, H. Zhou, Y. Wang, F. Zhu, and X. Q. Gao, “Cooperative precoding for integrated sensing and communication in massive MIMO LEO satellite-terrestrial networks,” <b><i>IEEE Wireless Communications Letters</i></b>, 2025. [<a href="https://ieeexplore.ieee.org/document/11178240">Full Paper</a>]</p>
 </li>
 <li><p>[P12] H. Yang, D. Wen, <b>L. You</b>, J. Wang, S. Wu, and Y. Shi, “MIMO over-the-air computation for device-edge collaborative inference,” <b><i>IEEE Transactions on Wireless Communications</i></b>, 2025. [<a href="https://ieeexplore.ieee.org/document/11151698">Full Paper</a>]</p>
@@ -261,7 +267,7 @@
 </li>
 <li><p>[C53] M. Qian, X. Mu, <b>L. You*</b>, and M. Matthaiou, “Beamforming design for CAPA-based multicast communications,” in <b><i>Proc. IEEE GLOBECOM 2025</i></b>, Taipei, Taiwan, Dec. 2025, 1-6.</p>
 </li>
-<li><p>[C52] Y. Zhao, <b>L. You*</b>, J. Tang, M. Qian, B. Jiang, and X. Q. Gao, “Channel estimation in massive MIMO-OFDM with multi-group adjustable phase shift pilots,” in <b><i>Proc. IEEE VTC 2025 Spring</i></b>, Oslo, Norway, Jun. 2025, 1-6.</p>
+<li><p>[C52] Y. Zhao, <b>L. You*</b>, J. Tang, M. Qian, B. Jiang, and X. Q. Gao, “Channel estimation in massive MIMO-OFDM with multi-group adjustable phase shift pilots,” in <b><i>Proc. IEEE VTC 2025 Spring</i></b>, Oslo, Norway, Jun. 2025, 1-6. [<a href="https://ieeexplore.ieee.org/abstract/document/11174505">Full Paper</a>]</p>
 </li>
 <li><p>[C51] C. Xie, <b>L. You*</b>, Z. Jin, J. Tang, X. Q. Gao, and X.-G. Xia, “Channel fingerprints extrapolation via generative model for multi-band massive MIMO transmission,” in <b><i>Proc. IEEE INFOCOM 2025</i></b>, London, United Kingdom, May 2025, 1-6. [<a href="https://ieeexplore.ieee.org/document/11153009">Full Paper</a>]</p>
 </li>
@@ -391,6 +397,7 @@
 </table>
 </body>
 </html>
+
 
 
 
