--- a/index.html
+++ b/index.html
@@ -61,9 +61,11 @@ Email: lyou@seu.edu.cn <br />
 </td></tr></table>
 <h2>News</h2> 
 <p><ul>
+<li><p>[<span class="statement">2025.10</span>]  Zhenzhou Jin's paper on channel fingerprint was accepted by IEEE Transactions on Wireless Communications. (金振洲的关于信道图谱的论文被IEEE Transactions on Wireless Communications录用)</p>
+</li>
 <li><p>[<span class="statement">2025.09</span>]  Zhenzhou Jin's paper on channel fingerprint was accepted by IEEE Transactions on Vehicular Technology. (金振洲的关于信道图谱的论文被IEEE Transactions on Vehicular Technology录用) <a href="https://ieeexplore.ieee.org/document/11190081">[link]</a></p>
 </li>
-<li><p>[<span class="statement">2025.09</span>]  Xinyi Guo's paper on massive MIMO federated learning was accepted by IEEE Transactions on Vehicular Technology. (郭鑫怡的关于大规模MIMO联邦学习的论文被IEEE Transactions on Vehicular Technology录用)</p>
+<li><p>[<span class="statement">2025.09</span>]  Xinyi Guo's paper on massive MIMO federated learning was accepted by IEEE Transactions on Vehicular Technology. (郭鑫怡的关于大规模MIMO联邦学习的论文被IEEE Transactions on Vehicular Technology录用) <a href="https://ieeexplore.ieee.org/document/11192777">[link]</a></p>
 </li>
 <li><p>[<span class="statement">2025.09</span>]  Li You was recommended as the Signal Processing for Communications Symposium Co-Chair of Globecom 2026. (尤力老师被遴选担任IEEE Globecom 2026 Signal Processing for Communications Symposium共同主席)</p>
 </li>
@@ -79,13 +81,13 @@ Email: lyou@seu.edu.cn <br />
 </li>
 <li><p>[<span class="statement">2025.07</span>]  Kelin Huang's paper on DMA was accepted by IEEE Transactions on Vehicular Technology. (黄珂琳的关于动态超表面天线的论文被IEEE Transactions on Vehicular Technology录用) <a href="https://ieeexplore.ieee.org/document/11096022">[link]</a></p>
 </li>
-<li><p>[<span class="statement">2025.06</span>]  Yuqi Ye's paper on fluid antenna was accepted by IEEE Transactions on Wireless Communications. (叶育琦的关于流体天线的论文被IEEE Transactions on Wireless Communications录用) <a href="https://ieeexplore.ieee.org/document/11080242">[link]</a></p>
-</li>
 </ul></p>
 <div class="content-container">  
 <div class="toggle-icon" id="toggleIcon"></div> View More Earlier News 
 <div class="toggle-content" id="toggleContent">  
 <p><ul>
+<li><p>[<span class="statement">2025.06</span>]  Yuqi Ye's paper on fluid antenna was accepted by IEEE Transactions on Wireless Communications. (叶育琦的关于流体天线的论文被IEEE Transactions on Wireless Communications录用) <a href="https://ieeexplore.ieee.org/document/11080242">[link]</a></p>
+</li>
 <li><p>[<span class="statement">2025.05</span>]  Chenjie Xie's paper on multi-band channel fingerprints extrapolation was accepted by IEEE Journal on Selected Areas in Communications. (谢晨洁的关于多频段信道图谱的论文被IEEE Journal on Selected Areas in Communications录用) <a href="https://ieeexplore.ieee.org/document/11059941">[link]</a></p>
 </li>
 <li><p>[<span class="statement">2025.04</span>]  Huibin Zhou's paper on massive MIMO LEO satellite communications was accepted by IEEE Transactions on Communications. (周慧斌的关于大规模MIMO低轨卫星通信的论文被IEEE Transactions on Communications录用) <a href="https://ieeexplore.ieee.org/document/10993491">[link]</a></p>
@@ -218,6 +220,7 @@ Email: lyou@seu.edu.cn <br />
 </table>
 </body>
 </html>
+
 
 
 
