--- a/index.html
+++ b/index.html
@@ -61,6 +61,8 @@ Email: lyou@seu.edu.cn <br />
 </td></tr></table>
 <h2>News</h2> 
 <p><ul>
+<li><p>[<span class="statement">2025.10</span>]  肖翔获东南大学优秀硕士专业学位论文</p>
+</li>
 <li><p>[<span class="statement">2025.10</span>]  Zhenzhou Jin's paper on channel fingerprint was accepted by IEEE Transactions on Wireless Communications. (金振洲的关于信道图谱的论文被IEEE Transactions on Wireless Communications录用)</p>
 </li>
 <li><p>[<span class="statement">2025.09</span>]  Zhenzhou Jin's paper on channel fingerprint was accepted by IEEE Transactions on Vehicular Technology. (金振洲的关于信道图谱的论文被IEEE Transactions on Vehicular Technology录用) <a href="https://ieeexplore.ieee.org/document/11190081">[link]</a></p>
@@ -220,6 +222,7 @@ Email: lyou@seu.edu.cn <br />
 </table>
 </body>
 </html>
+
 
 
 
