--- a/patents.html
+++ b/patents.html
@@ -26,6 +26,8 @@
 </div>
 <h3>中国专利</h3>
 <ul>
+<li><p>[73] “一种多点信道图谱辅助的基站切换方法及系统”, 国家发明专利, 专利号: ZL202510090966.7</p>
+</li>
 <li><p>[72] “一种近场信道图谱辅助的超大规模MIMO非正交导频设计方法及系统”, 国家发明专利, 专利号: ZL202411026155.2</p>
 </li>
 <li><p>[71] “大规模MIMO低轨卫星通信系统遗传用户调度方法”, 国家发明专利, 专利号: ZL202211145101.9</p>
@@ -193,5 +195,6 @@
 </table>
 </body>
 </html>
+
 
 
