--- a/index.html
+++ b/index.html
@@ -61,9 +61,11 @@ Email: lyou@seu.edu.cn <br />
 </td></tr></table>
 <h2>News</h2> 
 <p><ul>
+<li><p>[<span class="statement">2025.10</span>]  Tianxiang Xu's paper on multipoint channel charting was accepted by IEEE Communications Letters. (徐天祥的关于多点信道图谱的论文被IEEE Communications Letters录用)</p>
+</li>
 <li><p>[<span class="statement">2025.10</span>]  肖翔获东南大学优秀硕士专业学位论文</p>
 </li>
-<li><p>[<span class="statement">2025.10</span>]  Zhenzhou Jin's paper on channel fingerprint was accepted by IEEE Transactions on Wireless Communications. (金振洲的关于信道图谱的论文被IEEE Transactions on Wireless Communications录用)</p>
+<li><p>[<span class="statement">2025.10</span>]  Zhenzhou Jin's paper on channel fingerprint was accepted by IEEE Transactions on Wireless Communications. (金振洲的关于信道图谱的论文被IEEE Transactions on Wireless Communications录用) <a href="https://ieeexplore.ieee.org/document/11220249">[link]</a></p>
 </li>
 <li><p>[<span class="statement">2025.09</span>]  Zhenzhou Jin's paper on channel fingerprint was accepted by IEEE Transactions on Vehicular Technology. (金振洲的关于信道图谱的论文被IEEE Transactions on Vehicular Technology录用) <a href="https://ieeexplore.ieee.org/document/11190081">[link]</a></p>
 </li>
@@ -79,13 +81,13 @@ Email: lyou@seu.edu.cn <br />
 </li>
 <li><p>[<span class="statement">2025.07</span>]  Mengyu Qian's paper on continuous aperture array-based communications was accepted by IEEE GLOBECOM 2025. (潜梦羽的关于连续孔径阵列通信的论文被2025 IEEE GLOBECOM会议录用)</p>
 </li>
-<li><p>[<span class="statement">2025.07</span>]  Mengyu Qian's paper on holographic MIMO was accepted by IEEE Transactions on Communications. (潜梦羽的关于全息MIMO的论文被IEEE Transactions on Communications录用) <a href="https://ieeexplore.ieee.org/document/11112605">[link]</a></p>
-</li>
 </ul></p>
 <div class="content-container">  
 <div class="toggle-icon" id="toggleIcon"></div> View More Earlier News 
 <div class="toggle-content" id="toggleContent">  
 <p><ul>
+<li><p>[<span class="statement">2025.07</span>]  Mengyu Qian's paper on holographic MIMO was accepted by IEEE Transactions on Communications. (潜梦羽的关于全息MIMO的论文被IEEE Transactions on Communications录用) <a href="https://ieeexplore.ieee.org/document/11112605">[link]</a></p>
+</li>
 <li><p>[<span class="statement">2025.07</span>]  Kelin Huang's paper on DMA was accepted by IEEE Transactions on Vehicular Technology. (黄珂琳的关于动态超表面天线的论文被IEEE Transactions on Vehicular Technology录用) <a href="https://ieeexplore.ieee.org/document/11096022">[link]</a></p>
 </li>
 <li><p>[<span class="statement">2025.06</span>]  Yuqi Ye's paper on fluid antenna was accepted by IEEE Transactions on Wireless Communications. (叶育琦的关于流体天线的论文被IEEE Transactions on Wireless Communications录用) <a href="https://ieeexplore.ieee.org/document/11080242">[link]</a></p>
@@ -222,6 +224,7 @@ Email: lyou@seu.edu.cn <br />
 </table>
 </body>
 </html>
+
 
 
 
