--- a/publications.html
+++ b/publications.html
@@ -27,33 +27,33 @@
 <h2>Journal</h2>
 <h4>Preprint</h4>
 <ul>
-<li><p>[P16] Z. Jin, <b>L. You*</b>, X. Li, Z. Gao, Y. Liu, X.-G. Xia, and X. Q. Gao, “Channel fingerprint construction for massive MIMO: A deep conditional generative approach,” <b><i>IEEE Transactions on Wireless Communications</i></b>, 2025.</p>
+<li><p>[P16] T. Xu, <b>L. You*</b>, J. Wang, C. Xie, H. Che, C. Sun, and X. Q. Gao, “Efficient base station handover via multipoint channel charting-based SNR prediction,” <b><i>IEEE Communications Letters</i></b>, 2025.</p>
 </li>
-<li><p>[P15] Z. Jin, <b>L. You*</b>, X.-G. Xia, and X. Q. Gao, “EnvCDiff: Joint refinement of environmental information and channel fingerprints via conditional generative diffusion model,” <b><i>IEEE Transactions on Vehicular Technology</i></b>, 2025. [<a href="https://ieeexplore.ieee.org/document/11190081">Full Paper</a>]</p>
+<li><p>[P15] Z. Jin, <b>L. You*</b>, X. Li, Z. Gao, Y. Liu, X.-G. Xia, and X. Q. Gao, “Channel fingerprint construction for massive MIMO: A deep conditional generative approach,” <b><i>IEEE Transactions on Wireless Communications</i></b>, 2025. [<a href="https://ieeexplore.ieee.org/document/11220249">Full Paper</a>]</p>
 </li>
-<li><p>[P14] X. Guo, <b>L. You*</b>, Z. Chen, X. Lu, A. Nallanathan, and X. Q. Gao, “Quantization-based federated learning in user-centric cell-free massive MIMO,” <b><i>IEEE Transactions on Vehicular Technology</i></b>, 2025. [<a href="https://ieeexplore.ieee.org/document/11192777">Full Paper</a>]</p>
+<li><p>[P14] Z. Jin, <b>L. You*</b>, X.-G. Xia, and X. Q. Gao, “EnvCDiff: Joint refinement of environmental information and channel fingerprints via conditional generative diffusion model,” <b><i>IEEE Transactions on Vehicular Technology</i></b>, 2025. [<a href="https://ieeexplore.ieee.org/document/11190081">Full Paper</a>]</p>
 </li>
-<li><p>[P13] W. Zhu, Y. Zhang, Z. Xiang, D. Shi, <b>L. You</b>, and X. Q. Gao*, “Beam-structured precoding for network massive MIMO systems via Hamiltonian-based optimization,” <b><i>Science China Information Sciences</i></b>, 2025.</p>
+<li><p>[P13] X. Guo, <b>L. You*</b>, Z. Chen, X. Lu, A. Nallanathan, and X. Q. Gao, “Quantization-based federated learning in user-centric cell-free massive MIMO,” <b><i>IEEE Transactions on Vehicular Technology</i></b>, 2025. [<a href="https://ieeexplore.ieee.org/document/11192777">Full Paper</a>]</p>
 </li>
-<li><p>[P12] Q. Kong, <b>L. You*</b>, H. Li, H. Zhou, Y. Wang, F. Zhu, and X. Q. Gao, “Cooperative precoding for integrated sensing and communication in massive MIMO LEO satellite-terrestrial networks,” <b><i>IEEE Wireless Communications Letters</i></b>, 2025. [<a href="https://ieeexplore.ieee.org/document/11178240">Full Paper</a>]</p>
+<li><p>[P12] W. Zhu, Y. Zhang, Z. Xiang, D. Shi, <b>L. You</b>, and X. Q. Gao*, “Beam-structured precoding for network massive MIMO systems via Hamiltonian-based optimization,” <b><i>Science China Information Sciences</i></b>, 2025.</p>
 </li>
-<li><p>[P11] H. Yang, D. Wen, <b>L. You</b>, J. Wang, S. Wu, and Y. Shi, “MIMO over-the-air computation for device-edge collaborative inference,” <b><i>IEEE Transactions on Wireless Communications</i></b>, 2025. [<a href="https://ieeexplore.ieee.org/document/11151698">Full Paper</a>]</p>
+<li><p>[P11] Q. Kong, <b>L. You*</b>, H. Li, H. Zhou, Y. Wang, F. Zhu, and X. Q. Gao, “Cooperative precoding for integrated sensing and communication in massive MIMO LEO satellite-terrestrial networks,” <b><i>IEEE Wireless Communications Letters</i></b>, 2025. [<a href="https://ieeexplore.ieee.org/document/11178240">Full Paper</a>]</p>
 </li>
-<li><p>[P10] Q. Kong, <b>L. You*</b>, H. Zhou, Y. Zhu, Y. Wang, and X. Q. Gao, “Robust precoding for cooperative massive MIMO LEO satellite-terrestrial networks,” <b><i>IEEE Transactions on Vehicular Technology</i></b>, 2025. [<a href="https://ieeexplore.ieee.org/document/11143887">Full Paper</a>]</p>
+<li><p>[P10] H. Yang, D. Wen, <b>L. You</b>, J. Wang, S. Wu, and Y. Shi, “MIMO over-the-air computation for device-edge collaborative inference,” <b><i>IEEE Transactions on Wireless Communications</i></b>, 2025. [<a href="https://ieeexplore.ieee.org/document/11151698">Full Paper</a>]</p>
 </li>
-<li><p>[P9] Q. Zhang, J. H. Huang, J. Jiao, L. Xu, H. Liu, Y. Shi, X. J. Zhang, Y. Wang, S. Yang, K. Zhang, Z. Gao, S. Wang, <b>L. You</b>, D. M. Wang, D. X. Zhao, K. Li, J. Zhou, Z. Ji, X. Hu, J. Si, Z. Hou, L. Hu, D. Zhang, Y. Ma, N. Zhao, S. Wu, T. Jiang, X. Q. Gao, and X. H. You, “Direct satellite-to-device communications: Technical routes, architecture, and enabling technologies,” <b><i>Science China Information Sciences</i></b>, 2025.</p>
+<li><p>[P9] Q. Kong, <b>L. You*</b>, H. Zhou, Y. Zhu, Y. Wang, and X. Q. Gao, “Robust precoding for cooperative massive MIMO LEO satellite-terrestrial networks,” <b><i>IEEE Transactions on Vehicular Technology</i></b>, 2025. [<a href="https://ieeexplore.ieee.org/document/11143887">Full Paper</a>]</p>
 </li>
-<li><p>[P8] M. Qian, X. Mu, <b>L. You*</b>, H. Shin, and M. Matthaiou*, “Spectral efficiency analysis of near-field holographic MIMO over Ricean fading channels,” <b><i>IEEE Transactions on Communications</i></b>, 2025. [<a href="https://ieeexplore.ieee.org/document/11112605">Full Paper</a>]</p>
+<li><p>[P8] Q. Zhang, J. H. Huang, J. Jiao, L. Xu, H. Liu, Y. Shi, X. J. Zhang, Y. Wang, S. Yang, K. Zhang, Z. Gao, S. Wang, <b>L. You</b>, D. M. Wang, D. X. Zhao, K. Li, J. Zhou, Z. Ji, X. Hu, J. Si, Z. Hou, L. Hu, D. Zhang, Y. Ma, N. Zhao, S. Wu, T. Jiang, X. Q. Gao, and X. H. You, “Direct satellite-to-device communications: Technical routes, architecture, and enabling technologies,” <b><i>Science China Information Sciences</i></b>, 2025.</p>
 </li>
-<li><p>[P7] K. Huang, <b>L. You*</b>, M. Qian, B. Jiang, and X. Q. Gao, “QoS-guaranteed MIMO SWIPT assisted by dynamic metasurface antenna,” <b><i>IEEE Transactions on Vehicular Technology</i></b>, 2025. [<a href="https://ieeexplore.ieee.org/document/11096022">Full Paper</a>]</p>
+<li><p>[P7] M. Qian, X. Mu, <b>L. You*</b>, H. Shin, and M. Matthaiou*, “Spectral efficiency analysis of near-field holographic MIMO over Ricean fading channels,” <b><i>IEEE Transactions on Communications</i></b>, 2025. [<a href="https://ieeexplore.ieee.org/document/11112605">Full Paper</a>]</p>
 </li>
-<li><p>[P6] Y. Ye, <b>L. You*</b>, H. Xu, A. Elzanaty, K.-K. Wong, and X. Q. Gao, “Specific absorption rate-aware multiuser MIMO assisted by fluid antenna system,” <b><i>IEEE Transactions on Wireless Communications</i></b>, 2025. [<a href="https://ieeexplore.ieee.org/document/11080242">Full Paper</a>]</p>
+<li><p>[P6] K. Huang, <b>L. You*</b>, M. Qian, B. Jiang, and X. Q. Gao, “QoS-guaranteed MIMO SWIPT assisted by dynamic metasurface antenna,” <b><i>IEEE Transactions on Vehicular Technology</i></b>, 2025. [<a href="https://ieeexplore.ieee.org/document/11096022">Full Paper</a>]</p>
 </li>
-<li><p>[P5] B. Tang, H. Xu, K.-K. Wong, <b>L. You</b>, W. K. New, and C.-B. Chae, “Capacity maximization of uplink with fluid antenna system at both ends,” <b><i>IEEE Transactions on Wireless Communications</i></b>, 2025. [<a href="https://ieeexplore.ieee.org/document/11049889">Full Paper</a>]</p>
+<li><p>[P5] Y. Ye, <b>L. You*</b>, H. Xu, A. Elzanaty, K.-K. Wong, and X. Q. Gao, “Specific absorption rate-aware multiuser MIMO assisted by fluid antenna system,” <b><i>IEEE Transactions on Wireless Communications</i></b>, 2025. [<a href="https://ieeexplore.ieee.org/document/11080242">Full Paper</a>]</p>
 </li>
-<li><p>[P4] C. Xie, <b>L. You*</b>, Z. Jin, J. Tang, X. Q. Gao, and X.-G. Xia, “CF-CGN: Channel fingerprints extrapolation for multi-band massive MIMO transmission based on cycle-consistent generative networks,” <b><i>IEEE Journal on Selected Areas in Communications</i></b>, 2025. [<a href="https://ieeexplore.ieee.org/document/11059941">Full Paper</a>]</p>
+<li><p>[P4] B. Tang, H. Xu, K.-K. Wong, <b>L. You</b>, W. K. New, and C.-B. Chae, “Capacity maximization of uplink with fluid antenna system at both ends,” <b><i>IEEE Transactions on Wireless Communications</i></b>, 2025. [<a href="https://ieeexplore.ieee.org/document/11049889">Full Paper</a>]</p>
 </li>
-<li><p>[P3] H. Zhou, X. Gong, C. G. Tsinos, <b>L. You*</b>, X. Gao, and B. Ottersten, “GNN-enabled precoding for massive MIMO LEO satellite communications,” <b><i>IEEE Transactions on Communications</i></b>, 2025. [<a href="https://ieeexplore.ieee.org/document/10993491">Full Paper</a>]</p>
+<li><p>[P3] C. Xie, <b>L. You*</b>, Z. Jin, J. Tang, X. Q. Gao, and X.-G. Xia, “CF-CGN: Channel fingerprints extrapolation for multi-band massive MIMO transmission based on cycle-consistent generative networks,” <b><i>IEEE Journal on Selected Areas in Communications</i></b>, 2025. [<a href="https://ieeexplore.ieee.org/document/11059941">Full Paper</a>]</p>
 </li>
 <li><p>[P2] J. Tang, <b>L. You*</b>, X. Gong, C. Xie, X. Q. Gao*, X.-G. Xia, and X. Shi, "Statistical CSI acquisition for multi-frequency massive MIMO systems", <b><i>IEEE Transactions on Communications</i></b>, 2025. [<a href="https://ieeexplore.ieee.org/document/10993474">Full Paper</a>]</p>
 </li>
@@ -62,6 +62,8 @@
 </ul>
 <h4>Year 2025</h4>
 <ul>
+<li><p>[J90] H. Zhou, X. Gong, C. G. Tsinos, <b>L. You*</b>, X. Gao, and B. Ottersten, “GNN-enabled precoding for massive MIMO LEO satellite communications,” <b><i>IEEE Transactions on Communications</i></b>, vol. 73, no. 10, pp. 9028-9042, Oct. 2025. [<a href="https://ieeexplore.ieee.org/document/10993491">Full Paper</a>]</p>
+</li>
 <li><p>[J89] B. Tang, H. Xu*, K.-K. Wong*, <b>L. You</b>, J. Tang, Y. Zhang, and H. Shin, “Power minimization of multiuser FAS-RIS downlink system,” <b><i>IEEE Transactions on Vehicular Technology</i></b>, vol. 74, no. 10, pp. 16471-16476, Oct. 2025. [<a href="https://ieeexplore.ieee.org/document/10992286">Full Paper</a>]</p>
 </li>
 <li><p>[J88] J. Fang, Y. Liang, G. Sun, H. Hou, Y. Wang, <b>L. You</b>, and W. J. Wang*, “Polar-coded tensor-based unsourced random access with soft decoding,” <b><i>IEEE Transactions on Communications</i></b>, vol. 73, no. 9, pp. 7044-7057, Sep. 2025. [<a href="https://ieeexplore.ieee.org/document/10938717">Full Paper</a>]</p>
@@ -399,6 +401,7 @@
 </table>
 </body>
 </html>
+
 
 
 
