--- a/index.html
+++ b/index.html
@@ -61,7 +61,9 @@ Email: lyou@seu.edu.cn <br />
 </td></tr></table>
 <h2>News</h2> 
 <p><ul>
-<li><p>[<span class="statement">2025.10</span>]  Tianxiang Xu's paper on multipoint channel charting was accepted by IEEE Communications Letters. (徐天祥的关于多点信道图谱的论文被IEEE Communications Letters录用)</p>
+<li><p>[<span class="statement">2025.11</span>]  Yu Zhao's paper on pilot reuse for massive MIMO-OFDM was accepted by IEEE Transactions on Communications. (赵宇的关于大规模MIMO-OFDM导频复用的论文被IEEE Transactions on Communications录用)</p>
+</li>
+<li><p>[<span class="statement">2025.10</span>]  Tianxiang Xu's paper on multipoint channel charting was accepted by IEEE Communications Letters. (徐天祥的关于多点信道图谱的论文被IEEE Communications Letters录用) <a href="https://ieeexplore.ieee.org/document/11223663">[link]</a></p>
 </li>
 <li><p>[<span class="statement">2025.10</span>]  肖翔获东南大学优秀硕士专业学位论文</p>
 </li>
@@ -79,13 +81,13 @@ Email: lyou@seu.edu.cn <br />
 </li>
 <li><p>[<span class="statement">2025.08</span>]  Qingfu Kong's paper on cooperative massive MIMO LEO satellite-terrestrial networks was accepted by IEEE Transactions on Vehicular Technology. (孔庆付的关于大规模MIMO低轨星地协作网络的论文被IEEE Transactions on Vehicular Technology录用) <a href="https://ieeexplore.ieee.org/document/11143887">[link]</a></p>
 </li>
-<li><p>[<span class="statement">2025.07</span>]  Mengyu Qian's paper on continuous aperture array-based communications was accepted by IEEE GLOBECOM 2025. (潜梦羽的关于连续孔径阵列通信的论文被2025 IEEE GLOBECOM会议录用)</p>
-</li>
 </ul></p>
 <div class="content-container">  
 <div class="toggle-icon" id="toggleIcon"></div> View More Earlier News 
 <div class="toggle-content" id="toggleContent">  
 <p><ul>
+<li><p>[<span class="statement">2025.07</span>]  Mengyu Qian's paper on continuous aperture array-based communications was accepted by IEEE GLOBECOM 2025. (潜梦羽的关于连续孔径阵列通信的论文被2025 IEEE GLOBECOM会议录用)</p>
+</li>
 <li><p>[<span class="statement">2025.07</span>]  Mengyu Qian's paper on holographic MIMO was accepted by IEEE Transactions on Communications. (潜梦羽的关于全息MIMO的论文被IEEE Transactions on Communications录用) <a href="https://ieeexplore.ieee.org/document/11112605">[link]</a></p>
 </li>
 <li><p>[<span class="statement">2025.07</span>]  Kelin Huang's paper on DMA was accepted by IEEE Transactions on Vehicular Technology. (黄珂琳的关于动态超表面天线的论文被IEEE Transactions on Vehicular Technology录用) <a href="https://ieeexplore.ieee.org/document/11096022">[link]</a></p>
@@ -224,6 +226,7 @@ Email: lyou@seu.edu.cn <br />
 </table>
 </body>
 </html>
+
 
 
 
