--- a/publications.html
+++ b/publications.html
@@ -29,7 +29,7 @@
 <ul>
 <li><p>[P17] Y. Zhao, <b>L. You*</b>, J. Tang, M. Qian, B. Jiang, X.-G. Xia, and X. Q. Gao, “Massive MIMO-OFDM channel acquisition with multi-group adjustable phase shift pilots,” <b><i>IEEE Transactions on Communications</i></b>, 2025.</p>
 </li>
-<li><p>[P16] C. Zhang, J. Wang, <b>L. You</b>, C.-B. Chae, and K.-K. Wong, “Fluid XL-MIMO: Multiuser antenna allocation exploiting the visibility region information”, <b><i>IEEE Wireless Communications Letters</i></b>, 2025.</p>
+<li><p>[P16] C. Zhang, J. Wang, <b>L. You</b>, C.-B. Chae, and K.-K. Wong, “Fluid XL-MIMO: Multiuser antenna allocation exploiting the visibility region information,” <b><i>IEEE Wireless Communications Letters</i></b>, 2025.</p>
 </li>
 <li><p>[P15] T. Xu, <b>L. You*</b>, J. Wang, C. Xie, H. Che, C. Sun, and X. Q. Gao, “Efficient base station handover via multipoint channel charting-based SNR prediction,” <b><i>IEEE Communications Letters</i></b>, 2025. [<a href="https://ieeexplore.ieee.org/document/11223663">Full Paper</a>]</p>
 </li>
@@ -405,6 +405,7 @@
 </table>
 </body>
 </html>
+
 
 
 
