--- a/publications.html
+++ b/publications.html
@@ -57,7 +57,7 @@
 </li>
 <li><p>[P3] B. Tang, H. Xu, K.-K. Wong, <b>L. You</b>, W. K. New, and C.-B. Chae, “Capacity maximization of uplink with fluid antenna system at both ends,” <b><i>IEEE Transactions on Wireless Communications</i></b>, 2025. [<a href="https://ieeexplore.ieee.org/document/11049889">Full Paper</a>]</p>
 </li>
-<li><p>[P2] J. Tang, <b>L. You*</b>, X. Gong, C. Xie, X. Q. Gao*, X.-G. Xia, and X. Shi, "Statistical CSI acquisition for multi-frequency massive MIMO systems", <b><i>IEEE Transactions on Communications</i></b>, 2025. [<a href="https://ieeexplore.ieee.org/document/10993474">Full Paper</a>]</p>
+<li><p>[P2] J. Tang, <b>L. You*</b>, X. Gong, C. Xie, X. Q. Gao*, X.-G. Xia, and X. Shi, “Statistical CSI acquisition for multi-frequency massive MIMO systems,” <b><i>IEEE Transactions on Communications</i></b>, 2025. [<a href="https://ieeexplore.ieee.org/document/10993474">Full Paper</a>]</p>
 </li>
 <li><p>[P1] Z. Jin, <b>L. You*</b>, D. W. K. Ng, X.-G. Xia, and X. Q. Gao, “Near-field channel estimation for XL-MIMO: A deep generative model guided by side information,” <b><i>IEEE Transactions on Cognitive Communications and Networking</i></b>, 2025. [<a href="https://ieeexplore.ieee.org/document/10981727">Full Paper</a>]</p>
 </li>
@@ -405,6 +405,7 @@
 </table>
 </body>
 </html>
+
 
 
 
