--- a/awards.html
+++ b/awards.html
@@ -15,7 +15,11 @@
 <div class="menu-category">Home</div>
 <div class="menu-item"><a href="index.html">About&nbsp;me</a></div>
 <div class="menu-category">Research</div>
-<div class="menu-item"><a href="publications.html">Publications</a></div>
+<div class="content-container">  
+<div class="toggle-icon" id="toggleIcon"></div> Publications 
+<div class="toggle-content" id="toggleContent">  
+    <div class="menu-item"><a href="journal.html">Journal</a></div>
+    <div class="menu-item"><a href="conferenc.html">Conferenc</a></div>
 <div class="menu-item"><a href="patents.html">Patents</a></div>
 <div class="menu-item"><a href="awards.html" class="current">Awards</a></div>
 <div class="menu-item"><a href="other.html">Other</a></div>
@@ -46,3 +50,4 @@
 </table>
 </body>
 </html>
+
