--- a/publications.html
+++ b/publications.html
@@ -15,7 +15,11 @@
 <div class="menu-category">Home</div>
 <div class="menu-item"><a href="index.html">About&nbsp;me</a></div>
 <div class="menu-category">Research</div>
-<div class="menu-item"><a href="publications.html" class="current">Publications</a></div>
+<div class="content-container">  
+<div class="toggle-icon" id="toggleIcon"></div> Publications 
+<div class="toggle-content" id="toggleContent">  
+    <div class="menu-item"><a href="journal.html" class="current">Journal</a></div>
+    <div class="menu-item"><a href="conferenc.html">Conferenc</a></div>
 <div class="menu-item"><a href="patents.html">Patents</a></div>
 <div class="menu-item"><a href="awards.html">Awards</a></div>
 <div class="menu-item"><a href="other.html">Other</a></div>
@@ -268,143 +272,12 @@
 <li><p>[J1] <b>L. You</b>, X. Q. Gao*, X.-G. Xia, N. Ma, and Y. Peng, “Pilot reuse for massive MIMO transmission over spatially correlated Rayleigh fading channels,” <b><i>IEEE Transactions on Wireless Communications</i></b>, vol. 14, no. 6, pp. 3352-3366, Jun. 2015. <b>(ESI Highly Cited Paper)</b> [<a href="https://ieeexplore.ieee.org/document/7045498">Full Paper</a>]</p>
 </li>
 </ul>
-<h2>Conference</h2>
-<h4>Year 2025</h4>
-<ul>
-<li><p>[C54] J. Tang, X. Q. Gao*, <b>L. You</b>, X.-G. Xia, and C.-X. Wang, “Massive MIMO-OFDM statistical CSI acquisition with physical channel charting,” in <b><i>Proc. IEEE WCSP 2025</i></b>, Chongqing, China, Oct. 2025, 1-6.</p>
-</li>
-<li><p>[C53] M. Qian, X. Mu, <b>L. You*</b>, and M. Matthaiou, “Beamforming design for CAPA-based multicast communications,” in <b><i>Proc. IEEE GLOBECOM 2025</i></b>, Taipei, Taiwan, Dec. 2025, 1-6.</p>
-</li>
-<li><p>[C52] Y. Zhao, <b>L. You*</b>, J. Tang, M. Qian, B. Jiang, and X. Q. Gao, “Channel estimation in massive MIMO-OFDM with multi-group adjustable phase shift pilots,” in <b><i>Proc. IEEE VTC 2025 Spring</i></b>, Oslo, Norway, Jun. 2025, 1-6. [<a href="https://ieeexplore.ieee.org/abstract/document/11174505">Full Paper</a>]</p>
-</li>
-<li><p>[C51] C. Xie, <b>L. You*</b>, Z. Jin, J. Tang, X. Q. Gao, and X.-G. Xia, “Channel fingerprints extrapolation via generative model for multi-band massive MIMO transmission,” in <b><i>Proc. IEEE INFOCOM 2025</i></b>, London, United Kingdom, May 2025, 1-6. [<a href="https://ieeexplore.ieee.org/document/11153009">Full Paper</a>]</p>
-</li>
-<li><p>[C50] Z. Jin, <b>L. You*</b>, X. Li, Z. Gao, Y. Liu, X.-G. Xia, and X. Q. Gao, “Ultra-grained channel fingerprint construction via conditional generative diffusion models,” in <b><i>Proc. IEEE INFOCOM 2025</i></b>, London, United Kingdom, May 2025, 1-6. [<a href="https://ieeexplore.ieee.org/document/11152821">Full Paper</a>]</p>
-</li>
-<li><p>[C49] M. Qian, X. Mu, <b>L. You*</b>, and M. Matthaiou, “Near-field multi-user holographic MIMO communications over Ricean fading channels,” in <b><i>Proc. IEEE WCNC 2025</i></b>, Milan, Italy, Mar. 2025, 1-6. [<a href="https://ieeexplore.ieee.org/document/10978499">Full Paper</a>]</p>
-</li>
-<li><p>[C48] X. Guo, Q. Liu*, S. Wang, and <b>L. You*</b>, “Stochastic geometry-based MCS adaption analysis for uplink cellular networks,” in <b><i>Proc. IEEE WCNC 2025</i></b>, Milan, Italy, Mar. 2025, 1-6. [<a href="https://ieeexplore.ieee.org/document/10978118">Full Paper</a>]</p>
-</li>
-<li><p>[C47] H. Zhou, X. Gong, C. G. Tsinos, <b>L. You*</b>, X. Gao, and B. Ottersten, “GNN-enabled deep unfolding for precoding in massive MIMO LEO satellite communications,” in <b><i>Proc. IEEE WCNC 2025</i></b>, Milan, Italy, Mar. 2025, 1-6. [<a href="https://ieeexplore.ieee.org/document/10978590">Full Paper</a>]</p>
-</li>
-</ul>
-<h4>Year 2024</h4>
-<ul>
-<li><p>[C46] R. Sun, <b>L. You</b>, A.-A. Lu, C. Sun, Z. Xiang, X. Q. Gao*, and  X.-G. Xia, “Matrix manifold precoder design for user-centric network massive MIMO,” in <b><i>Proc. IEEE GLOBECOM 2024</i></b>, Cape Town, South Africa, Dec. 2024, 1-6. [<a href="https://ieeexplore.ieee.org/document/10901351">Full Paper</a>]</p>
-</li>
-<li><p>[C45] J. Tang, X. Q. Gao*, <b>L. You</b>, D. Shi, J. Yang, X.-G. Xia, X. Zhao, and P. Jiang, “Time-frequency phase-shifted pilots for massive MIMO-OFDM channel estimation,” in <b><i>Proc. IEEE GLOBECOM 2024</i></b>, Cape Town, South Africa, Dec. 2024, 1-6. [<a href="https://ieeexplore.ieee.org/document/10901171">Full Paper</a>]</p>
-</li>
-<li><p>[C44] Y. Ye, <b>L. You*</b>, H. Xu, A. Elzanaty, K.-K. Wong, and X. Q. Gao, “Electromagnetic exposure-constrained multiuser MIMO assisted by fluid antenna system,” in <b><i>Proc. IEEE GLOBECOM 2024</i></b>, Cape Town, South Africa, Dec. 2024, 1-6. [<a href="https://ieeexplore.ieee.org/document/10900984">Full Paper</a>]</p>
-</li>
-<li><p>[C43] M. Qian, <b>L. You*</b>, X.-G. Xia, and X. Q. Gao, “Holographic planar arrays-assisted multi-user uplink transmission,” in <b><i>Proc. IEEE GLOBECOM 2024</i></b>, Cape Town, South Africa, Dec. 2024, 1-6. [<a href="https://ieeexplore.ieee.org/document/10901272">Full Paper</a>]</p>
-</li>
-<li><p>[C42] Z. Jin, <b>L. You*</b>, D. W. K. Ng, X.-G. Xia, and X. Q. Gao, “A generative denoising approach for near-field XL-MIMO channel estimation,” in <b><i>Proc. IEEE GLOBECOM 2024</i></b>, Cape Town, South Africa, Dec. 2024, 1-6. [<a href="https://ieeexplore.ieee.org/document/10901741">Full Paper</a>]</p>
-</li>
-<li><p>[C41] B. Tang, H. Xu, K.-K. Wong, <b>L. You</b>, and W. K. New, “Power allocation for FAS-assisted downlink communication,” in <b><i>Proc. IEEE MAPE 2024</i></b>, Guangzhou, China, Nov. 2024, 1-4. <b>(IEEE MAPE 2024 Best Student Paper Award)</b> [<a href="https://ieeexplore.ieee.org/document/10924461">Full Paper</a>]</p></li>
-<li><p>[C40] X. Niu, <b>L. You</b>, A.-A. Lu, and X. Q. Gao*, “Precoding design for coordinated multicast and unicast transmission in C-V2V massive MIMO with imperfect CSI,” in <b><i>Proc. IEEE VTC 2024 Spring</i></b>, Singapore, Jun. 2024, 1-6. [<a href="https://ieeexplore.ieee.org/document/10683349">Full Paper</a>]</p>
-</li>
-<li><p>[C39] Z. Jin, <b>L. You*</b>, J. Wang, X.-G. Xia, and X. Q. Gao, “Channel knowledge map construction with Laplacian pyramid reconstruction network,” in <b><i>Proc. IEEE WCNC 2024</i></b>, Dubai, United Arab Emirates, Apr. 2024, 1–6. [<a href="https://ieeexplore.ieee.org/document/10570885">Full Paper</a>]</p>
-</li>
-</ul>
-<h4>Year 2023</h4>
-<ul>
-<li><p>[C38] S. Wu, Y. Wang, G. Sun, <b>L You</b>, W. Wang*, and R. Ding, “Energy and computational efficient precoding for LEO satellite communications,” in <b><i>Proc. IEEE GLOBECOM 2023</i></b>, Kuala Lumpur, Malaysia, Dec. 2023, 1872-1877. [<a href="https://ieeexplore.ieee.org/document/10437228">Full Paper</a>]</p>
-</li>
-<li><p>[C37] C. Xie, and <b>L. You*</b>, “Deep learning aided beam prediction in dual-band multi-cell massive MIMO system,” in <b><i>Proc. URSI GASS 2023</i></b>, Sapporo, Japan, Aug. 2023, 1-4. [<a href="https://ieeexplore.ieee.org/document/10265352">Full Paper</a>]</p>
-</li>
-<li><p>[C36] X. Qiang, <b>L. You*</b>, Y. Zhu, F. Jiang, C. G. Tsinos, W. Wang, H. Wymeersch, and X. Q. Gao, “Hybrid precoding for integrated communications and localization in massive MIMO LEO satellite systems,” in <b><i>Proc. IEEE ICC 2023</i></b>, Rome, Italy, May 2023, 1-6. [<a href="https://ieeexplore.ieee.org/document/10279396">Full Paper</a>]</p>
-</li>
-<li><p>[C35] J. Tang, <b>L. You</b>, X. Gao, and X.-G. Xia, “Statistical CSI acquisition in multi-frequency communication systems,” in <b><i>Proc. IEEE WCNC 2023</i></b>, Glasgow, United Kingdom (Great Britain), Mar. 2023, 1-6. [<a href="https://ieeexplore.ieee.org/abstract/document/10118598">Full Paper</a>]</p>
-</li>
-</ul>
-<h4>Year 2022</h4>
-<ul>
-<li><p>[C34] H. Jiang, <b>L. You*</b>, J. Wang, W. Wang, and X. Gao, “EM exposure aware transmission design for hybrid RIS and DMA assisted multiuser MIMO uplink,” in <b><i>Proc. IEEE GLOBECOM 2022</i></b>, Rio de Janeiro, Brazil, Dec. 2022, 1600-1605. [<a href="https://ieeexplore.ieee.org/document/10001589">Full Paper</a>]</p>
-</li>
-<li><p>[C33] H. Jiang, <b>Li You</b>, A. Elzanaty, J. Wang, W. Wang, X. Gao, and M.-S. Alouini, “Electromagnetic exposure aware RSMA for multiuser massive MIMO uplink,” in <b><i>Proc. ICSPS 2022</i></b>, Jiangsu, China, Nov. 2022, 634-639. [<a href="https://ieeexplore.ieee.org/document/10218551">Full Paper</a>]</p>
-</li>
-<li><p>[C32] M. Qian, <b>L. You*</b>, W. Wang, and X. Gao, “Low-complexity multi-user MIMO uplink transmission assisted by dual-polarized reconfigurable intelligent surface,” in <b><i>Proc. IEEE ICCC 2022</i></b>, Foshan City, China, Aug. 2022, 576-581. [<a href="https://ieeexplore.ieee.org/document/9880726">Full Paper</a>]</p>
-</li>
-<li><p>[C31] Y. Ye, <b>L. You*</b>, “Energy efficiency optimization for radar-communication coexistence with statistical CSIT,” in <b><i>Proc. URSI AT-AP-RASC 2022</i></b>, Gran Canaria, Spain, Jun. 2022, 1-4. [<a href="https://ieeexplore.ieee.org/document/9814317">Full Paper</a>]</p>
-</li>
-<li><p>[C30] X. Qiang, <b>L. You</b>, C. G. Tsinos, W. Wang, X. Q. Gao, and B. Ottersten, “Joint communications and sensing for hybrid massive MIMO LEO satellite systems with beam squint,” in <b><i>Proc. IEEE ICC 2022</i></b>, Seoul, South Korea, May 2022, 1-6. [<a href="https://ieeexplore.ieee.org/document/9814509">Full Paper</a>]</p>
-</li>
-<li><p>[C29] Y. Zhu, G. Sun, W. Wang, <b>L. You</b>, F. Wei, L. Wang, and Y. Chen, “Massive grant-free receiver design for OFDM-based transmission over frequency-selective fading channels,” in <b><i>Proc. IEEE ICC 2022</i></b>, Seoul, South Korea, May 2022, 1-6. [<a href="https://ieeexplore.ieee.org/document/9839286">Full Paper</a>]</p>
-</li>
-</ul>
-<h4>Year 2021</h4>
-<ul>
-<li><p>[C28] X. Qiang, <b>L. You</b>, K.-X. Li, C. G. Tsinos, W. Wang, X. Q. Gao, and B. Ottersten, “Twin-resolution phase shifters based massive MIMO hybrid precoding for LEO SATCOM with nonlinear PAs,” in <b><i>Proc. IEEE GLOBECOM 2021</i></b>, Madrid, Spain, Dec. 2021, 1-6. [<a href="https://ieeexplore.ieee.org/document/9685106">Full Paper</a>]</p>
-</li>
-<li><p>[C27] T. Chen, W. Wang, R. Ding, G. Seco-Granados, <b>L. You</b>, and X. Gao, “Precoding design for joint positioning and synchronization in 5G integrated satellite communications,” in <b><i>Proc. IEEE GLOBECOM 2021</i></b>, Madrid, Spain, Dec. 2021, 1-6. [<a href="https://ieeexplore.ieee.org/document/9685480">Full Paper</a>]</p>
-</li>
-<li><p>[C26] J. Xu, <b>L. You</b>, G. C. Alexandropoulos, J. Wang, W. Wang, and X. Q. Gao, “Dynamic metasurface antennas for energy efficient uplink massive MIMO communications,” in <b><i>Proc. IEEE GLOBECOM 2021</i></b>, Madrid, Spain, Dec. 2021, 1-6. [<a href="https://ieeexplore.ieee.org/document/9685389">Full Paper</a>]</p>
-</li>
-<li><p>[C25] K.-X. Li, <b>L. You</b>, J. Wang, X. Q. Gao*, C. G. Tsinos, S. Chatzinotas, and B. Ottersten, “Massive MIMO downlink transmission for LEO satellite communications,” in <b><i>Proc. IEEE VTC 2021 Fall</i></b>, Norman, OK, USA, Sep. 2021, 1-4. [<a href="https://ieeexplore.ieee.org/document/9625530">Full Paper</a>]</p>
-</li>
-<li><p>[C24] L. Gao, W. Wang, R. Ding, <b>L. You</b>, and X. Q. Gao, “Resource efficiency optimization for robust multigroup multicast satellite communications,” in <b><i>Proc. IEEE ICC 2021</i></b>, Montreal, Canada, Aug. 2021, 1-6. [<a href="https://ieeexplore.ieee.org/document/9473760">Full Paper</a>]</p>
-</li>
-<li><p>[C23] <b>L. You</b>, L. Gao, W. Wang, and X. Q. Gao, “Non-orthogonal multicast and unicast beamforming for multi-beam satellite communications,” in <b><i>Proc. URSI GASS 2021</i></b>, Rome, Italy, Aug. 2021, 1-4. [<a href="https://ieeexplore.ieee.org/document/9560613">Full Paper</a>]</p>
-</li>
-<li><p>[C22] X. Qiang, <b>L. You</b>, K.-X. Li, C. G. Tsinos, W. Wang, X. Q. Gao, and B. Ottersten, “Hybrid A/D precoding for downlink massive MIMO in LEO satellite communications,” in <b><i>Proc. IEEE ICC 2021</i></b>, Montreal, Canada, Jun. 2021, 1-6. [<a href="https://ieeexplore.ieee.org/document/9473680">Full Paper</a>]</p>
-</li>
-</ul>
-<h4>Year 2020</h4>
-<ul>
-<li><p>[C21] J. Xiong, <b>L. You</b>, D. W. K. Ng, C. Yuen, W. Wang, and X. Q. Gao, “Energy efficiency and spectral efficiency tradeoff in RIS-aided multiuser MIMO uplink system,” in <b><i>Proc. IEEE GLOBECOM 2020</i></b>, Taipei, Taiwan, Dec. 2020, 1-6. [<a href="https://ieeexplore.ieee.org/document/9348208">Full Paper</a>]</p>
-</li>
-<li><p>[C20] T. Chen, W. Wang, R. Ding, G. Seco-Granados, <b>L. You</b>, and X. Q. Gao, “Location-based timing advance estimation for 5G integrated LEO satellite communications,” in <b><i>Proc. IEEE GLOBECOM 2020</i></b>, Taipei, Taiwan, Dec. 2020, 1-6. [<a href="https://ieeexplore.ieee.org/document/9322428">Full Paper</a>]</p>
-</li>
-<li><p>[C19] R. Ding, T. Chen, L. Liu, Z. Zheng, Y. Hao, H. Zheng, W. Wang, and <b>L. You</b>, “5G integrated satellite communication systems: Architectures, air interface, and standardization,” in <b><i>Proc. IEEE WCSP 2020</i></b>, Nanjing, China, Oct. 2020, 702-707. [<a href="https://ieeexplore.ieee.org/document/9299757">Full Paper</a>]</p>
-</li>
-<li><p>[C18] Y. Huang, <b>L. You</b>, J. Xiong, W. Wang, and X. Q. Gao, “Max-min energy-efficient multi-cell massive MIMO transmission exploiting statistical CSI,” in <b><i>Proc. IEEE ICCC 2020</i></b>, Chongqing, China, Aug. 2020, 300-305. [<a href="https://ieeexplore.ieee.org/document/9238778">Full Paper</a>]</p>
-</li>
-<li><p>[C17] <b>L. You</b>, K.-X. Li, J. Wang, X. Q. Gao, X.-G. Xia, and B. Ottersten, “LEO satellite communications with massive MIMO,” in <b><i>Proc. IEEE ICC 2020</i></b>, Dublin, Ireland, Jun. 2020, 1-6. [<a href="https://ieeexplore.ieee.org/document/9149121">Full Paper</a>]</p>
-</li>
-<li><p>[C16] L. Gao, J. Ma, <b>L. You</b>, C. Pan, W. Wang, and X. Q. Gao, “Robust energy-efficient multigroup multicast beamforming for multi-beam satellite communications,” in <b><i>Proc. IEEE ICC 2020</i></b>, Dublin, Ireland, Jun. 2020, 1-6. [<a href="https://ieeexplore.ieee.org/document/9149230">Full Paper</a>]</p>
-</li>
-<li><p>[C15] X. Chen, <b>L. You</b>, X. Song, F. Jiang, W. Wang, X. Q. Gao, and G. Fettweis, “Network massive MIMO transmission over millimeter-wave bands,” in <b><i>Proc. IEEE ICC 2020</i></b>, Dublin, Ireland, Jun. 2020, 1-6. [<a href="https://ieeexplore.ieee.org/document/9149014">Full Paper</a>]</p>
-</li>
-<li><p>[C14] J. Xiong, <b>L. You</b>, Y. Huang, D. W. K. Ng, W. Wang, and X. Q. Gao, “Reconfigurable intelligent surfaces assisted MIMO-MAC with partial CSI,” in <b><i>Proc. IEEE ICC 2020</i></b>, Dublin, Ireland, Jun. 2020, 1-6. [<a href="https://ieeexplore.ieee.org/document/9149355">Full Paper</a>]</p>
-</li>
-</ul>
-<h4>Year 2019</h4>
-<ul>
-<li><p>[C13] Y. Chen, <b>L. You</b>, A.-A. Lu, X. Q. Gao, and X.-G. Xia, “IQ imbalance aware receiver for uplink massive MIMO-OFDM with adjustable phase shift pilots,” in <b><i>Proc. IEEE GLOBECOM 2019</i></b>, Waikoloa, HI, USA, Dec. 2019, 1-6. [<a href="https://ieeexplore.ieee.org/document/9014285">Full Paper</a>]</p>
-</li>
-<li><p>[C12] J. Xiong, <b>L. You</b>, X. Yi, J. Wang, W. J. Wang, and X. Q. Gao, “Energy efficient precoding for massive MIMO downlink transmission with statistical CSI,” in <b><i>Proc. IEEE GLOBECOM 2019</i></b>, Waikoloa, HI, USA, Dec. 2019, 1-6. [<a href="https://ieeexplore.ieee.org/document/9014009">Full Paper</a>]</p>
-</li>
-<li><p>[C11] J. Xiong, <b>L. You</b>, A. Zappone, W. J. Wang, and X. Q. Gao, “Energy- and spectral-efficiency tradeoff in beam domain massive MIMO downlink with statistical CSIT,” in <b><i>Proc. IEEE GlobalSIP 2019</i></b>, Ottawa, Ontario, Canada, Nov. 2019, 1-5. [<a href="https://ieeexplore.ieee.org/document/8969338">Full Paper</a>]</p>
-</li>
-<li><p>[C10] R. Ding, J. Wang, Y. Li, <b>L. You</b>, and Q. Sun, “A stochastic ray-tracing approach for maritime line-of-sight channel modeling,” in <b><i>Proc. IEEE ICCT 2019</i></b>, Xi’an, China, Oct. 2019, 135-139. [<a href="https://ieeexplore.ieee.org/document/8947033">Full Paper</a>]</p>
-</li>
-<li><p>[C9] K.-X. Li, <b>L. You</b>, J. Wang, and X. Q. Gao, “Transmit design for massive MIMO multicasting with statistical CSIT,” in <b><i>Proc. IEEE ICC 2019</i></b>, Shanghai, China, May 2019, 1-6. [<a href="https://ieeexplore.ieee.org/document/8761542">Full Paper</a>]</p>
-</li>
-</ul>
-<h4>Before Year 2019</h4>
-<ul>
-<li><p>[C8] H. Zhou, J. Wang, Q. Sun, W. Feng, <b>L. You</b>, and C. Xu, “A ray-optics approach for evaporation duct channel modeling,” in <b><i>Proc. IEEE WCSP 2018</i></b>, Hangzhou, China, Oct. 2018, 1-6. [<a href="https://ieeexplore.ieee.org/document/8555877">Full Paper</a>]</p>
-</li>
-<li><p>[C7] A. Liu, Q. Zhang, W. J. Wang, <b>L. You</b>, Q. Huang, X. Q. Gao, and G. Zheng, “Robust multigroup multicast precoding for frame-based multi-beam satellite communications,” in <b><i>Proc. IEEE PIMRC 2018</i></b>, Bologna, Italy, Sep. 2018, 1237-1241. [<a href="https://ieeexplore.ieee.org/document/8580877">Full Paper</a>]</p>
-</li>
-<li><p>[C6] X. Yang, <b>L. You</b>, W. J. Wang, and X. Q. Gao, “Channel estimation for massive MIMO uplink transmission over frequency selective fading channels,” in <b><i>Proc. IEEE PIMRC 2018</i></b>, Bologna, Italy, Sep. 2018, 1427-1432. [<a href="https://ieeexplore.ieee.org/document/8581008">Full Paper</a>]</p>
-</li>
-<li><p>[C5] <b>L. You</b>, X. Q. Gao, G. Y. Li, X.-G. Xia, and N. Ma, “Millimeter-wave/Terahertz massive MIMO BDMA transmission with per-beam synchronization,” in <b><i>Proc. IEEE ICC 2017</i></b>, Paris, France, May 2017, 1-6. [<a href="https://ieeexplore.ieee.org/abstract/document/7997063">Full Paper</a>]</p>
-</li>
-<li><p>[C4] Y. Chen, X. Q. Gao, X.-G. Xia, and <b>L. You</b>, “A robust precoding for RF mismatched massive MIMO transmission,” in <b><i>Proc. IEEE ICC 2017</i></b>, Paris, France, May 2017, 1-6. [<a href="https://ieeexplore.ieee.org/document/7996781">Full Paper</a>]</p>
-</li>
-<li><p>[C3] <b>L. You</b>, X. Q. Gao, A. L. Swindlehurst, and W. Zhong, “Adjustable phase shift pilots for sparse massive MIMO-OFDM channels,” in <b><i>Proc. IEEE SPAWC 2015</i></b>, Stockholm, Sweden, Jun. 2015, 206-210. [<a href="https://ieeexplore.ieee.org/document/7227029">Full Paper</a>]</p>
-</li>
-<li><p>[C2] T. T. Lian, <b>L. You</b>, W. Zhong and X. Q. Gao, “Coordinated pilot reuse for multi-cell massive MIMO transmission,” in <b><i>Proc. IEEE PIMRC 2014</i></b>, Washington D.C., USA, Sep. 2014, 467–471. [<a href="https://ieeexplore.ieee.org/document/7136215">Full Paper</a>]</p>
-</li>
-<li><p>[C1] <b>L. You</b>, X. Q. Gao, X.-G. Xia, N. Ma, and Y. Peng, “Massive MIMO transmission with pilot reuse in single cell,” in <b><i>Proc. IEEE ICC 2014</i></b>, Sydney, Australia, Jun. 2014, 4794-4799. [<a href="https://ieeexplore.ieee.org/document/6884077">Full Paper</a>]</p>
-</li>
-</ul>
 </td>
 </tr>
 </table>
 </body>
 </html>
+
 
 
 
