--- a/awards.html
+++ b/awards.html
@@ -15,12 +15,13 @@
 <div class="menu-category">Home</div>
 <div class="menu-item"><a href="index.html">About&nbsp;me</a></div>
 <div class="menu-category">Research</div>
-<div class="content-container">  
-<div class="toggle-icon" id="toggleIcon"></div> Publications 
-<div class="toggle-content" id="toggleContent">  
-    <div class="menu-item"><a href="journal.html">Journal</a></div>
-    <div class="menu-item"><a href="conferenc.html">Conferenc</a></div>
-  
+<div class="dropdown">
+    <button type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown"> Publications
+    </button>
+    <ul class="dropdown-menu">
+      <li><a class="dropdown-item" href="[journal.html]">Journal</a></li>
+      <li><a class="dropdown-item" href="[conference.html]">Conference</a></li>
+    </ul>     
 <div class="menu-item"><a href="patents.html">Patents</a></div>
 <div class="menu-item"><a href="awards.html" class="current">Awards</a></div>
 <div class="menu-item"><a href="other.html">Other</a></div>
@@ -51,5 +52,6 @@
 </table>
 </body>
 </html>
+
 
 
