--- a/awards.html
+++ b/awards.html
@@ -19,8 +19,8 @@
     <button type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown"> Publications
     </button>
     <ul class="dropdown-menu">
-      <li><a class="dropdown-item" href="[journal.html]">Journal</a></li>
-      <li><a class="dropdown-item" href="[conference.html]">Conference</a></li>
+      <li><a class="dropdown-item" href="journal.html">Journal</a></li>
+      <li><a class="dropdown-item" href="conference.html">Conference</a></li>
     </ul>     
 <div class="menu-item"><a href="patents.html">Patents</a></div>
 <div class="menu-item"><a href="awards.html" class="current">Awards</a></div>
@@ -52,6 +52,7 @@
 </table>
 </body>
 </html>
+
 
 
 
