--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
     <button type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown"> Publications
     </button>
     <ul class="dropdown-menu">
-      <li><a class="dropdown-item" href="[journal.html]">Journal</a></li>
-      <li><a class="dropdown-item" href="[conference.html]">Conference</a></li>
+      <li><a class="dropdown-item" href="journal.html">Journal</a></li>
+      <li><a class="dropdown-item" href="conference.html">Conference</a></li>
     </ul>     
 <div class="menu-item"><a href="patents.html">Patents</a></div>
 <div class="menu-item"><a href="awards.html">Awards</a></div>
@@ -232,6 +232,7 @@ Email: lyou@seu.edu.cn <br />
 </table>
 </body>
 </html>
+
 
 
 
