--- a/journal.html
+++ b/journal.html
@@ -19,7 +19,7 @@ div class="dropdown">
   <button type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown"> Publications
   </button>
   <ul class="dropdown-menu">
-    <li><a class="dropdown-item" href="journal.html" class="current">Journal</a></li>
+    <li><a class="dropdown-item"><a href="journal.html" class="current">Journal</a></a></li>
     <li><a class="dropdown-item" href="conference.html">Conference</a></li>
   </ul>     
 <div class="menu-item"><a href="patents.html">Patents</a></div>
@@ -279,6 +279,7 @@ div class="dropdown">
 </table>
 </body>
 </html>
+
 
 
 
