--- a/journal.html
+++ b/journal.html
@@ -15,7 +15,7 @@
 <div class="menu-category">Home</div>
 <div class="menu-item"><a href="index.html">About&nbsp;me</a></div>
 <div class="menu-category">Research</div>
-div class="dropdown">
+<div class="dropdown">
   <button type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown"> Publications
   </button>
   <ul class="dropdown-menu">
@@ -279,6 +279,7 @@ div class="dropdown">
 </table>
 </body>
 </html>
+
 
 
 
